working with hard coding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "09-homework",
   "version": "1.0.0",
-  "description": "",
   "main": "keys.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +20,6 @@
   },
   "dependencies": {
     "node-spotify-api": "^1.0.7"
-  }
+  },
+  "description": ""
 }
